// protoc --go_out=../../internal/cache --go_opt=paths=source_relative --go-grpc_out=../../internal/cache --go-grpc_opt=paths=source_relative cache.proto 

syntax = "proto3";

option go_package = "github.com/n-creativesystem/oidc-proxy/internal/cache";

package cache;

service Cache {
    rpc Init(SettingRequest) returns (Empty) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Put(PutRequest) returns (Empty) {}
    rpc Delete(DeleteRequest) returns (Empty) {}
}

message SettingRequest {
    repeated string endpoints = 1;
    int32 cacheTime = 2;
    string userName = 3;
    string password = 4;
}

message GetRequest { 
    string key = 1; 
}
message PutRequest { 
    string key = 1;
    string value = 2; 
}
message DeleteRequest {
    string key = 1;
}

message GetResponse { 
    string value = 1;
}
message Empty {}